Correct thumbnail container display and alignment
Fix display property and center align thumbnails.

--- a/style.css
+++ b/style.css
@@ -29,11 +29,11 @@
     #thumbnail-container {
         display:flexbox;
         flex-direction:column;
+        align-items: center;
     }
 
     .thumbnail {
         width:50%;
-        justify-self:center;
     }
 }
 
